add VAE downloads

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -92,7 +92,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This will download model 1.5 (4GB) and 1.5-inpainting (4GB)"
+    "### This will download model 1.5 (4GB) and 1.5-inpainting (4GB)\n",
+    "\n",
+    "Go to these pages and accept the licenses before running the next cell:\n",
+    "\n",
+    "https://huggingface.co/runwayml/stable-diffusion-v1-5\n",
+    "\n",
+    "https://huggingface.co/CompVis/stable-diffusion-v-1-4-original\n",
+    "\n",
+    "https://huggingface.co/runwayml/stable-diffusion-inpainting"
    ]
   },
   {
@@ -117,6 +125,36 @@
     "\n",
     "# Inpainting model 1.5 (4GB)\n",
     "!wget --header={user_header} https://huggingface.co/runwayml/stable-diffusion-inpainting/resolve/main/sd-v1-5-inpainting.ckpt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download variational autoencoder\n",
+    "\n",
+    "Doing this can improve the quality of generated images\n",
+    "\n",
+    "Go to these pages and accept the licenses before running the next cell:\n",
+    "\n",
+    "https://huggingface.co/stabilityai/sd-vae-ft-ema-original\n",
+    "\n",
+    "https://huggingface.co/stabilityai/sd-vae-ft-mse-original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
+    "\n",
+    "# sd-vae-ft-ema-original\n",
+    "!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-ema-original/blob/main/vae-ft-ema-560000-ema-pruned.ckpt\n",
+    "\n",
+    "# sd-vae-ft-mse-original\n",
+    "#!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/blob/main/vae-ft-mse-840000-ema-pruned.ckpt"
    ]
   },
   {
