check free disk space before downloading models

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -3,24 +3,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "gfKvWAVnz8OB"
-   },
-   "source": [
-    "Adapted from: https://colab.research.google.com/drive/1kw3egmSn-KgWsikYvOMjJkVDsPLjEMzl\n",
-    "\n",
-    "Which was adapted from: https://colab.research.google.com/drive/1AfAmwLMd_Vx33O9IwY2TmO9wKZ8ABRRa"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "OHCtG9MT0jLq"
    },
    "source": [
     "# Installation: Install ngrok reverse proxy\n",
-    "because creating a public gradio link doesn't work on SageMaker SL\n",
+    "because creating a public gradio link doesn't work on SageMaker Studio Lab (at least not when I tried)\n",
     "\n",
-    "***You only need to do this once on your SageMaker SL account***"
+    "***You only need to do this once on your SageMaker SL account***\n",
+    "\n",
+    "You will need a ngrok auth token later. If you don't have a ngrok account yet, create one here: https://dashboard.ngrok.com/signup\n",
+    "\n",
+    "It's free for non-commercial use"
    ]
   },
   {
@@ -67,10 +60,33 @@
     "id": "F0EINk5M0s-w"
    },
    "source": [
-    "# Installation: Download the model from huggingface\n",
+    "# Installation: Download model(s) from huggingface\n",
     "***You only need to do this once on your SageMaker SL account***\n",
     "\n",
-    "Alternatively you can upload one or more .ckpt files to the ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/ folder"
+    "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/ folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check free disk space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!df -h | grep -E 'Avail|home'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Huggingface token"
    ]
   },
   {
@@ -92,9 +108,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This will download model 1.5 (4GB) and 1.5-inpainting (4GB)\n",
+    "### Download model(s)\n",
+    "The next cell will download model ***v1-5-pruned-emaonly.ckpt*** (4GB) \n",
     "\n",
-    "Go to these pages and accept the licenses before running the next cell:\n",
+    "This model can be used for training textual inversion embeddings and hypernetworks\n",
+    "\n",
+    "Comment out and uncomment lines in the next cell to download different models\n",
+    "\n",
+    "Go to these pages and ***accept the licenses*** before running the next cell:\n",
     "\n",
     "https://huggingface.co/runwayml/stable-diffusion-v1-5\n",
     "\n",
@@ -117,25 +138,25 @@
     "# Model 1.4\n",
     "#!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt\n",
     "\n",
-    "# Model 1.5 for training (8GB)\n",
+    "# Model 1.5 (8GB) - only necessary for native training, not for embeddings/hypernetworks\n",
     "#!wget --header={user_header} https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned.ckpt \n",
     "\n",
     "# Model 1.5 (4GB)\n",
     "!wget --header={user_header} https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.ckpt \n",
     "\n",
     "# Inpainting model 1.5 (4GB)\n",
-    "!wget --header={user_header} https://huggingface.co/runwayml/stable-diffusion-inpainting/resolve/main/sd-v1-5-inpainting.ckpt"
+    "#!wget --header={user_header} https://huggingface.co/runwayml/stable-diffusion-inpainting/resolve/main/sd-v1-5-inpainting.ckpt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download variational autoencoder\n",
+    "### Download variational autoencoder (VAE)\n",
     "\n",
-    "Doing this can improve the quality of generated images\n",
+    "Doing so can improve the quality of generated images, if you select the VAE in the webui settings\n",
     "\n",
-    "Go to these pages and accept the licenses before running the next cell:\n",
+    "Go to these pages and ***accept the licenses*** before running the next cell:\n",
     "\n",
     "https://huggingface.co/stabilityai/sd-vae-ft-ema-original\n",
     "\n",
@@ -151,10 +172,10 @@
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
     "\n",
     "# sd-vae-ft-ema-original\n",
-    "!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-ema-original/blob/main/vae-ft-ema-560000-ema-pruned.ckpt\n",
+    "#!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-ema-original/blob/main/vae-ft-ema-560000-ema-pruned.ckpt\n",
     "\n",
     "# sd-vae-ft-mse-original\n",
-    "#!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/blob/main/vae-ft-mse-840000-ema-pruned.ckpt"
+    "!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/blob/main/vae-ft-mse-840000-ema-pruned.ckpt"
    ]
   },
   {
@@ -191,11 +212,7 @@
    "source": [
     "# Setup: Add ngrok auth token\n",
     "\n",
-    "***You only need to do this once***, unless you change your ngrok auth token\n",
-    "\n",
-    "If you don't have a ngrok account yet, create one here: https://dashboard.ngrok.com/signup\n",
-    "\n",
-    "It's free for non-commercial use"
+    "***You only need to do this once***, unless you change your ngrok auth token"
    ]
   },
   {
@@ -219,8 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NGROK_AUTH_TOKEN = {ngrok_token_textbox.value}\n",
-    "!~/sagemaker-studiolab-notebooks/ngrok/ngrok config add-authtoken $NGROK_AUTH_TOKEN"
+    "ngrok_auth_token = {ngrok_token_textbox.value}\n",
+    "!~/sagemaker-studiolab-notebooks/ngrok/ngrok config add-authtoken $ngrok_auth_token"
    ]
   },
   {
