--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stable Diffusion WebUI (Automatic1111) for SageMaker Studio Lab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "OHCtG9MT0jLq"
    },
@@ -412,6 +419,22 @@
    "outputs": [],
    "source": [
     "!rm -rf ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/outputs/*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete ngrok logfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log"
    ]
   },
   {
