--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -433,9 +433,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!rm ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -452,6 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!rm ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log\n",
     "exit()"
    ]
   }
