--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -423,25 +423,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Delete ngrok logfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "zB-L8JpElKp-"
    },
    "source": [
-    "### Restart kernel (this kills webui and ngrok)"
+    "### Restart kernel and delete logfile (this kills webui and ngrok)"
    ]
   },
   {
