--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ngrok_auth_token = {ngrok_token_textbox.value}\n",
+    "ngrok_auth_token = ngrok_token_textbox.value\n",
     "!~/sagemaker-studiolab-notebooks/ngrok/ngrok config add-authtoken $ngrok_auth_token"
    ]
   },
