hax fix opencv problem

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -63,6 +63,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Installation: Install webui requirements.txt\n",
+    "I don't think this is necessary, but it doesn't hurt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
+    "!COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "F0EINk5M0s-w"
    },
@@ -189,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Installation: Uninstall opencv-python to avoid error when starting webui\n",
+    "# Installation: Uninstall opencv-python to avoid libgthread error when starting webui\n",
     "\n",
     "***You only need to do this once on your SageMaker SL account***"
    ]
@@ -201,7 +219,7 @@
    "outputs": [],
    "source": [
     "%pip uninstall opencv-python -y\n",
-    "#%pip install opencv-python-headless"
+    "%pip install opencv-python-headless"
    ]
   },
   {
@@ -210,7 +228,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip uninstall opencv-python-headless "
+    "# this will restart the kernel\n",
+    "exit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hax: No idea what the problem is here, but the next cell will make sure you don't get ImportError: libgthread-2.0.so.0 errors when starting the webui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip uninstall opencv-python-headless -y"
    ]
   },
   {
@@ -285,29 +320,6 @@
    "outputs": [],
    "source": [
     "!tail ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "v2kY0Z05DwIN",
-    "tags": []
-   },
-   "source": [
-    "# Installation: Install webui requirements.txt\n",
-    "I don't think this is necessary, but it doesn't hurt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "IB19TzabDtYF"
-   },
-   "outputs": [],
-   "source": [
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
-    "!COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py"
    ]
   },
   {
