--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Installation: Uninstall opencv-python to avoid libgthread error when starting webui\n",
+    "# Installation: Uninstall opencv-python to prevent libgthread error when starting webui\n",
     "\n",
     "***You only need to do this once on your SageMaker SL account***"
    ]
@@ -389,7 +389,8 @@
    },
    "source": [
     "End: Commands for ***after*** you have gotten done with a session\n",
-    "============================================================================"
+    "============================================================================\n",
+    "Click the square stop button before running these cells"
    ]
   },
   {
