--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download variational autoencoder (VAE)\n",
+    "### Optional: Download variational autoencoder (VAE)\n",
     "\n",
     "Doing so can improve the quality of generated images, if you select the VAE in the webui settings\n",
     "\n",
@@ -201,6 +201,29 @@
     "\n",
     "# sd-vae-ft-mse-original\n",
     "!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Optional: Download waifu division model and VAE\n",
+    "\n",
+    "From https://huggingface.co/hakurei/waifu-diffusion-v1-4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
+    "!wget --header={user_header} https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/models/wd-1-3-penultimate-ucg-cont.ckpt\n",
+    "\n",
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
+    "!wget --header={user_header} https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\n",
+    "!wget --header={user_header} https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt"
    ]
   },
   {
