--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -230,6 +230,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Optional: Download a model from MEGA\n",
+    "\n",
+    "Change DOWNLOAD_URL to the URL of the model, then run the cell\n",
+    "\n",
+    "Download can be very slow (>30 minutes for a 4GB model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##########################################################\n",
+    "MEGA_DOWNLOAD_URL = \"https://mega.nz/file/mdcVARhL#FUq5TL2xp7FuzzgMS4B20sOYYnPZsyPMw93sPMHeQ78\"\n",
+    "##########################################################\n",
+    "\n",
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
+    "\n",
+    "%pip install mega.py\n",
+    "from mega import Mega\n",
+    "\n",
+    "mega = Mega()\n",
+    "print(\"Connecting to MEGA\")\n",
+    "m = mega.login()\n",
+    "print(\"Downloading file (no progress display available)\")\n",
+    "m.download_url(MEGA_DOWNLOAD_URL)\n",
+    "print(\"Download complete\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Installation: Uninstall opencv-python to prevent libgthread error when starting webui\n",
     "\n",
     "***You only need to do this once on your SageMaker SL account***"
