--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "### Optional: Download a model from MEGA\n",
     "\n",
-    "Change DOWNLOAD_URL to the URL of the model, then run the cell\n",
+    "Change MEGA_DOWNLOAD_URL to the URL of the model, then run the cell\n",
     "\n",
     "Download can be very slow (>30 minutes for a 4GB model)"
    ]
