--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -4,39 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stable Diffusion WebUI (Automatic1111) for SageMaker Studio Lab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "OHCtG9MT0jLq"
-   },
-   "source": [
-    "# Installation: Install ngrok reverse proxy\n",
-    "because creating a public gradio link doesn't work on SageMaker Studio Lab (at least not when I tried)\n",
+    "# Stable Diffusion WebUI (Automatic1111) for SageMaker Studio Lab\n",
     "\n",
-    "***You only need to do this once on your SageMaker SL account***\n",
+    "You will need a ngrok auth token to run it, as gradio doesn't work on SageMaker Studio Lab\n",
     "\n",
-    "You will need a ngrok auth token later. If you don't have a ngrok account yet, create one here: https://dashboard.ngrok.com/signup\n",
+    "If you don't have a ngrok account yet, create one here: https://dashboard.ngrok.com/signup\n",
     "\n",
     "It's free for non-commercial use"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir -p ~/sagemaker-studiolab-notebooks/ngrok\n",
-    "%cd ~/sagemaker-studiolab-notebooks/ngrok\n",
-    "!wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz -O ~/sagemaker-studiolab-notebooks/ngrok/ngrok.tgz\n",
-    "!tar zxf ngrok.tgz\n",
-    "!rm ngrok.tgz\n",
-    "!rm -rf ~/.config/ngrok\n",
-    "!mkdir -p ~/.config/ngrok\n",
-    "!echo 'version: \"2\"\\nconsole_ui: false' >~/.config/ngrok/ngrok.yml "
    ]
   },
   {
@@ -63,24 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Installation: Install webui requirements.txt\n",
-    "I don't think this is necessary, but it doesn't hurt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
-    "!COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "F0EINk5M0s-w"
    },
@@ -89,6 +45,15 @@
     "***You only need to do this once on your SageMaker SL account***\n",
     "\n",
     "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/ folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Download model(s)\n"
    ]
   },
   {
@@ -117,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
@@ -133,7 +100,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download model(s)\n",
     "The next cell will download model ***v1-5-pruned-emaonly.ckpt*** (4GB) \n",
     "\n",
     "This model can be used for training textual inversion embeddings and hypernetworks\n",
@@ -153,7 +119,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "CT_J9L7oqLxG"
+    "id": "CT_J9L7oqLxG",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -194,18 +161,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
-    "\n",
     "# sd-vae-ft-ema-original\n",
+    "#%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
     "#!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-ema-original/resolve/main/vae-ft-ema-560000-ema-pruned.ckpt\n",
     "\n",
     "# sd-vae-ft-mse-original\n",
-    "!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt"
+    "#%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
+    "#!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
+    "\n",
+    "# sd-vae-ft-mse-original\n",
+    "# Use this if you downloaded v1-5-pruned-emaonly.ckpt above and want to autoselect the VAE every time you load this model in the webui\n",
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
+    "!wget --header={user_header} https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt -O v1-5-pruned-emaonly.vae.pt \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "###  Optional: Download waifu division model and VAE\n",
     "\n",
@@ -228,10 +204,66 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Optional: Download a model from Google Drive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optional: Download a model from MEGA\n",
+    "Copy the file ID from your url and paste it into the GOOGLE_FILE_ID variable below, before running this cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###########################################################\n",
+    "GOOGLE_FILE_ID = \"1wHFgl0ivCmIZv88hVZXkb8oy9qCuaBGA\"\n",
+    "###########################################################\n",
     "\n",
+    "# above file ID is Stable Diffusion model 1.4. Replace it with the file ID of the model you want to download from Google Drive\n",
+    "\n",
+    "import gdown\n",
+    "\n",
+    "%cd /content/stable-diffusion-webui/models/Stable-diffusion/\n",
+    "url = \"https://drive.google.com/u/0/uc?id=\" + GOOGLE_FILE_ID + \"&export=download&confirm=t\"\n",
+    "print(\"Downloading \" + url)\n",
+    "gdown.download(url)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Optional: Download a model from MEGA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Change MEGA_DOWNLOAD_URL to the URL of the model, then run the cell\n",
     "\n",
     "Download can be very slow (>30 minutes for a 4GB model)"
@@ -266,7 +298,11 @@
    "source": [
     "# Installation: Uninstall opencv-python to prevent libgthread error when starting webui\n",
     "\n",
-    "***You only need to do this once on your SageMaker SL account***"
+    "***You only need to do this once on your SageMaker SL account***\n",
+    "\n",
+    "This section is a unnecessary mess, but it works. It may be enough to just run the !conda install part. Did not test it yet, as I'd have to create a new account for that\n",
+    "\n",
+    "Not running this section will lead to libgthread-2.0.so.0 errors when starting the webui"
    ]
   },
   {
@@ -290,13 +326,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "hax: No idea what the problem is here, but the next cell will make sure you don't get ImportError: libgthread-2.0.so.0 errors when starting the webui"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -306,12 +335,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install glib=2.51.0 -y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "S8nvm5f6AfaL"
+   },
+   "source": [
+    "# Update: Change into Web UI directory and download updates\n",
+    "This is not strictly necessary. You can run this every time before you start the webui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
+    "!git pull"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup: Add ngrok auth token\n",
-    "\n",
-    "***You only need to do this once***, unless you change your ngrok auth token"
+    "## Update: Install webui requirements.txt\n",
+    "This is necessary sometimes after you did a !git pull above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run: Enter ngrok auth token\n"
    ]
   },
   {
@@ -330,76 +404,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ngrok_auth_token = ngrok_token_textbox.value\n",
-    "!~/sagemaker-studiolab-notebooks/ngrok/ngrok config add-authtoken $ngrok_auth_token"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Run: Launch ngrok before launching webui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# start ngrok as background process\n",
-    "import multiprocessing\n",
-    "\n",
-    "def run_ngrok_bg():\n",
-    "    !~/sagemaker-studiolab-notebooks/ngrok/ngrok tcp 7860 --log=stdout > ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log\n",
-    "    \n",
-    "multiprocessing.Process(target=run_ngrok_bg).start()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Run next cell to see the public ngrok URL, replace tcp:// with http://"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!tail ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "S8nvm5f6AfaL"
-   },
-   "source": [
-    "# Run: Change into Web UI directory and download updates\n",
-    "This is not strictly necessary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
-    "!git pull"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "xt8lbdmC04ox"
@@ -407,12 +411,7 @@
    "source": [
     "# Run: Launch web ui\n",
     "\n",
-    "Commandline arguments are:\n",
-    "  - `--share` - create online gradio.app link (this doesn't work on SageMaker SL)\n",
-    "  - `--gradio-debug` - print outputs to console\n",
-    "  - `--gradio-auth me:qwerty` - add authentication to gradio: username me, password qwerty\n",
-    "  \n",
-    "Change username and password in the next cell for ***security reasons***"
+    "You will get a ngrok.io link. Follow it and enter the username and password shown below. You may want to change username and password for security reasons."
    ]
   },
   {
@@ -430,12 +429,21 @@
     "\n",
     "##################################\n",
     "\n",
-    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \"\\\"\"\n",
-    "\n",
-    "!echo $ARGS\n",
+    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
+    "#ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --share\\\"\"\n",
     "\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
     "!COMMANDLINE_ARGS=$ARGS REQS_FILE=\"requirements.txt\" python launch.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Commandline arguments are:\n",
+    "  - `--share` - create online gradio.app link (currently this doesn't work on SageMaker SL)\n",
+    "  - `--gradio-debug` - print outputs to console\n",
+    "  - `--ngrok` - start ngrok reverse proxy with supplied auth token"
    ]
   },
   {
