fix libgthread mess

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -4,13 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stable Diffusion WebUI (Automatic1111) for SageMaker Studio Lab\n",
+    "# Stable Diffusion WebUI (AUTOMATIC1111) for SageMaker Studio Lab\n",
     "\n",
-    "You will need a ngrok auth token to run it, as gradio doesn't work on SageMaker Studio Lab\n",
+    "This notebook will install and run the [stable-diffusion-webui repository by AUTOMATIC1111](https://github.com/AUTOMATIC1111/stable-diffusion-webui) on SageMaker Studio Lab\n",
+    "\n",
+    "With the default model you can run textual inversion training, hypernetwork training and image generation, but no native training\n",
+    "\n",
+    "You will need a ngrok (reverse proxy) auth token to run it, as gradio sharing doesn't work on SageMaker Studio Lab\n",
     "\n",
     "If you don't have a ngrok account yet, create one here: https://dashboard.ngrok.com/signup\n",
     "\n",
-    "It's free for non-commercial use"
+    "It's free for non-commercial use\n",
+    "\n",
+    "If you use the default model, you will also need a Huggingface user token. Alternatively you can download a model from Google Drive or MEGA, without needing a Huggingface token"
    ]
   },
   {
@@ -144,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optional: Download variational autoencoder (VAE)\n",
+    "### Recommended Optional: Download variational autoencoder (VAE)\n",
     "\n",
     "Doing so can improve the quality of generated images, if you select the VAE in the webui settings\n",
     "\n",
@@ -296,42 +302,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Installation: Uninstall opencv-python to prevent libgthread error when starting webui\n",
+    "# Installation: Install glib to prevent libgthread error when starting webui\n",
     "\n",
-    "***You only need to do this once on your SageMaker SL account***\n",
-    "\n",
-    "This section is a unnecessary mess, but it works. It may be enough to just run the !conda install part. Did not test it yet, as I'd have to create a new account for that\n",
-    "\n",
-    "Not running this section will lead to libgthread-2.0.so.0 errors when starting the webui"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip uninstall opencv-python -y\n",
-    "%pip install opencv-python-headless"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this will restart the kernel\n",
-    "exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip uninstall opencv-python-headless -y"
+    "***You only need to do this once on your SageMaker SL account***"
    ]
   },
   {
@@ -368,7 +341,7 @@
    "metadata": {},
    "source": [
     "## Update: Install webui requirements.txt\n",
-    "This is necessary sometimes after you did a !git pull above"
+    "This is necessary sometimes after you did a `!git pull` above"
    ]
   },
   {
@@ -453,7 +426,7 @@
     "tags": []
    },
    "source": [
-    "End: Commands for ***after*** you have gotten done with a session\n",
+    "End: Commands for ***after*** you're done with a session\n",
     "============================================================================\n",
     "Click the square stop button before running these cells"
    ]
@@ -505,7 +478,7 @@
     "id": "zB-L8JpElKp-"
    },
    "source": [
-    "### Restart kernel and delete logfile (this kills webui and ngrok)"
+    "### Restart kernel (this quits the webui)"
    ]
   },
   {
@@ -514,7 +487,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm ~/sagemaker-studiolab-notebooks/ngrok/ngrok.log\n",
     "exit()"
    ]
   }
