--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -50,7 +50,7 @@
     "# Installation: Download model(s) from huggingface\n",
     "***You only need to do this once on your SageMaker SL account***\n",
     "\n",
-    "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/ folder"
+    "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the `~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/` folder"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell will download model ***v1-5-pruned-emaonly.ckpt*** (4GB) \n",
+    "The next cell will download model `v1-5-pruned-emaonly.ckpt` (4GB) \n",
     "\n",
     "This model can be used for training textual inversion embeddings and hypernetworks\n",
     "\n",
@@ -265,10 +265,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Change MEGA_DOWNLOAD_URL to the URL of the model, then run the cell\n",
     "\n",
@@ -439,7 +437,7 @@
    "source": [
     "### Create .tar.gz archive of images for downloading \n",
     "\n",
-    "Location will be ***~/sagemaker-studiolab-notebooks/outputs.tar.gz***"
+    "Location will be `~/sagemaker-studiolab-notebooks/outputs.tar.gz`"
    ]
   },
   {
