--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copy the file ID from your url and paste it into the GOOGLE_FILE_ID variable below, before running this cell"
+    "Copy the file ID from your URL and paste it into the `GOOGLE_FILE_ID` variable below, before running this cell"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change MEGA_DOWNLOAD_URL to the URL of the model, then run the cell\n",
+    "Change `MEGA_DOWNLOAD_URL` to the URL of the model, then run the cell\n",
     "\n",
     "Download can be very slow (>30 minutes for a 4GB model)"
    ]
