images will be generated in /tmp

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -38,7 +38,11 @@
    "outputs": [],
    "source": [
     "%cd ~/sagemaker-studiolab-notebooks/\n",
-    "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui"
+    "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+    "#create softlink to /tmp/outputs for storing images\n",
+    "#contents of /tmp folder will be deleted when each session ends\n",
+    "!ln -s /tmp/outputs stable-diffusion-webui/outputs\n",
+    "!ln -s /tmp ~/sagemaker-studiolab-notebooks/tmp"
    ]
   },
   {
@@ -400,6 +404,9 @@
     "\n",
     "##################################\n",
     "\n",
+    "# create /tmp/outputs folder for storing generated images for this session\n",
+    "!mkdir -p /tmp/outputs\n",
+    "\n",
     "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
     "#ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --share\\\"\"\n",
     "\n",
@@ -437,7 +444,7 @@
    "source": [
     "### Create .tar.gz archive of images for downloading \n",
     "\n",
-    "Location will be `~/sagemaker-studiolab-notebooks/outputs.tar.gz`"
+    "Location will be `~/sagemaker-studiolab-notebooks/tmp/outputs.tar.gz`"
    ]
   },
   {
@@ -446,28 +453,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/\n",
+    "%cd /tmp\n",
     "!echo \"Creating archive. Please wait...\"\n",
-    "!tar -czf ~/sagemaker-studiolab-notebooks/outputs.tar.gz outputs\n",
-    "!echo \"You can now delete the generated images and download the archive\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zB-L8JpElKp-"
-   },
-   "source": [
-    "### Delete generated images from outputs folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -rf ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/outputs/*"
+    "!tar -czf /tmp/outputs.tar.gz outputs\n",
+    "!echo \"You can now download the archive with generated images\""
    ]
   },
   {
