--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -444,7 +444,7 @@
    "source": [
     "### Create .tar.gz archive of images for downloading \n",
     "\n",
-    "Location will be `~/sagemaker-studiolab-notebooks/tmp/outputs.tar.gz`"
+    "Location will be `~/sagemaker-studiolab-notebooks/tmp/outputs.tar.gz` and `/tmp/outputs.tar.gz`"
    ]
   },
   {
@@ -457,24 +457,6 @@
     "!echo \"Creating archive. Please wait...\"\n",
     "!tar -czf /tmp/outputs.tar.gz outputs\n",
     "!echo \"You can now download the archive with generated images\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zB-L8JpElKp-"
-   },
-   "source": [
-    "### Restart kernel (this quits the webui)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exit()"
    ]
   }
  ],
