--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -386,7 +386,9 @@
    "source": [
     "# Run: Launch web ui\n",
     "\n",
-    "You will get a ngrok.io link. Follow it and enter the username and password shown below. You may want to change username and password for security reasons."
+    "You will get a ngrok.io link. Follow it and enter the username and password shown below. You may want to change username and password for security reasons.\n",
+    "\n",
+    "Note that every time you stop the SageMaker Studio Lab runtime the generated images will be lost, as they are stored in the /tmp folder"
    ]
   },
   {
